Sync from private tree @ fdfff94